<resources>
    <string name="app_name">MVVMRunningApp</string>
    <string name="google_maps_key">AIzaSyDYXvR3IBaQICe0yuw7RiSv7evoB_jCEms</string>
    <string name="txt_running_app">Running App</string>
    <string name="txt_your_runs">Your Runs</string>
    <string name="txt_statistics">Statistics</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_kg">kg</string>
    <string name="txt_your_weight">Your Weight</string>
    <string name="text_your_name">Your Name</string>
    <string name="txt_welcome_name_weight">Welcome!\nPlease enter your name and weight.</string>
    <string name="txt_sort_by">Sort by:</string>
    <string name="txt_apply_changes">Apply Changes</string>
    <string name="txt_total_distance">Total Distance</string>
    <string name="txt_total_time">Total Time</string>
    <string name="txt_total_calories_burned">Total Calories Burned</string>
    <string name="txt_average_speed">Average Speed</string>
    <string name="txt_cancel_run">Cancel Run</string>
    <string name="txt_save_run_successfully">Run saved successfully</string>
    <string name="txt_date">DATE</string>
    <string name="txt_time">TIME</string>
    <string name="txt_distance">DISTANCE</string>
    <string name="txt_avgspeed">AVGSPEED</string>
    <string name="txt_calories">CALORIES</string>
    <string name="txt_duration">DURATION</string>
    <string name="txt_avg_speed">AVG SPEED</string>
    <string name="txt_calories_burned">CALORIES BURNED</string>
</resources>