<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/basic15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/basic16">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_date"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_duration"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvAvgSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_avg_speed"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_distance"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvCaloriesBurned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_calories_burned"
            android:textSize="20sp"
            android:gravity="center"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>