<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/basic08">

    <ImageView
        android:id="@+id/ivRunImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic16"
        android:text="@string/txt_date"
        app:layout_constraintEnd_toStartOf="@+id/tvTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRunImage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic16"
        android:text="@string/txt_time"
        app:layout_constraintEnd_toStartOf="@+id/tvDistance"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/ivRunImage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic16"
        android:text="@string/txt_distance"
        app:layout_constraintEnd_toStartOf="@+id/tvAvgSpeed"
        app:layout_constraintStart_toEndOf="@+id/tvTime"
        app:layout_constraintTop_toBottomOf="@+id/ivRunImage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAvgSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic16"
        android:text="@string/txt_avgspeed"
        app:layout_constraintEnd_toStartOf="@+id/tvCalories"
        app:layout_constraintStart_toEndOf="@+id/tvDistance"
        app:layout_constraintTop_toBottomOf="@+id/ivRunImage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic16"
        android:text="@string/txt_calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAvgSpeed"
        app:layout_constraintTop_toBottomOf="@+id/ivRunImage" />

</androidx.constraintlayout.widget.ConstraintLayout>
